Versions with "_xx" subversions are internal test releases.  Most
subversions are available from <http://www.newts.org/~troc/poe.html>.

[ Hey, Rocco, don't forget to assign a tag to the release after you
make dist on it!  0.0910 is ``v0_0910''!  For example:

  cvs tag -Rc v0_10 .
]

*** To Do:
***   Redocument the debugging constants.
***   Check the macro preprocessor documentation.

0.1001 2000.??.?? (!!!)
-----------------------

POE::Kernel overhaul.  Commented more things, broke some monolithic
subs apart.  Generally cleaned up the code.

(!!!) Removed POE::Kernel::session_create, which was silly to begin
with.

Added POE::Preprocessor, a macro preprocessor.  Macroized some
redundant bits of POE::Kernel.

(!!!) Split the debugging constants between assertions which die
noisily when POE detects internal inconsistencies; and traces that
show ongoing activity.  The constans are renamed ASSERT_* and TRACE_*
to reflect their function.


0.10 2000.03.23 (!!!)
---------------------

Added POE::Component to the MANIFEST.  Whoops!

Everything from 0.0901 through 0.0910 is included in this public
CPAN release.  People using 0.09 should read through to see
what has changed, paying extra attention to the bits marked
incompatible.


0.0910 2000.03.09 (!!!)
-----------------------

POE now keeps track of the file and line number where an event was
generated.  $session->option( default => 1 ) will report the line and
file, so you know where strange events came from.

(!!!) Add session ID to reference lookup from alias_resolve.
ID_id_to_session is depreciated.  The incompatibility here is that
session IDs take precedence over aliases, so sessions shouldn't be
aliased to numbers.

(!!!) Depreciated ID_session_to_id, since alias_resolve does the same
thing.  No warnings have been set yet, to give developers time to
react to the change.

Tweaked the Win32 support to eliminate some redefined sub warnings.


0.0909 2000.03.10
-----------------
